--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,14 @@ html {
 }
 
 /* scroll snap */
-.servicios,
-.navegacion-principal,
-.formulario {
+
+@media (min-width: 768px) {
+    .servicios,
+    .navegacion-principal,
+    .formulario {
     scroll-snap-align: center;
     scroll-snap-stop: always;
+}
 }
 
 *, *:before, *:after {
